# global_navigation

./: README.md  dependencies.repos  requirements.txt
.github/workflows/: humble.yaml  main.yaml  rolling.yaml
local_navigation/: CMakeLists.txt  README.md  package.xml
local_navigation/config/: lidarslam_summit.yaml  local_nav.rviz  params.yaml  params_go2.yaml  params_perro.yaml  params_summit.yaml
local_navigation/include/local_navigation/: GridmapUpdaterNode.hpp
local_navigation/launch/: demo.launch.py  lidarslam_summit.launch.py  local_navigation.launch.py  local_navigation_go2.launch.py  local_navigation_perro.launch.py  local_navigation_summit.launch.py
local_navigation/src/: local_navigation_program.cpp
local_navigation/src/local_navigation/: GridmapUpdaterNode.cpp
local_navigation/src/tools/: summit_correct_zed_tf.cpp
nav_analyzer/: package.xml  setup.cfg  setup.py
nav_analyzer/nav_analyzer/: ground_analyzer.py  nav_analyzer_node.py
traversability_updater/: README.md  package.xml  setup.cfg  setup.py
traversability_updater/traversability_updater/: ground_analyzer.py  net.py  traversability_updater_node.py
